--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.3
   shared_preferences: ^2.0.7
   http: ^0.13.3
+  table_calendar: ^3.0.2
 
 dev_dependencies:
   flutter_test:
