--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^2.0.7
   http: ^0.13.3
   table_calendar: ^3.0.2
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
