--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.3
   table_calendar: ^3.0.2
   dio: ^4.0.0
+  intl: ^0.17.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
